Fix #108285: Remap Users operator doesn't work on Objects.

Objects were excluded from the ID operation, as originally they had
their own entry in their own menu. Joys of nightmare tools handling in
the Outliner...